--- a/STUDENTAPI-SPRINGBOOT/src/main/resources/application.properties
+++ b/STUDENTAPI-SPRINGBOOT/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.application.name=SpringBootProject
-server.port=2001
+server.port=2002
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/studentdb
+spring.datasource.url=jdbc:mysql://localhost:3306/practicedb205
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=32939
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
